# Learning_python

./: notas  pyproject.toml
Application/Basics/: DataStructures.py
Application/Big data/: ModeloDeAprendizaje.py  Pandas.py
Application/WebScraping/: Main.py
Application/WebScraping/Extraer_texto/: main.py
Application/WebScraping/data/: noticias.csv
Application/WebScraping/linkedBot/data/: session_cookies.csv
Application/WebScraping/linkedBot/src/: LinkedBot.py
Application/WebScraping/linkedBot/src/data/: empresas.csv  session_cookies.csv
Application/WebScraping/linkedBot/src/extraer_llaves/: Extract_key_session.py
Application/WebScraping/linkedBot/src/modulos/: Extract.py  Login.py  Save.py  Search.py
Application/WebScraping/proyecto1/: Main.py
Application/WebScraping/proyecto1/data/: noticias.csv
Application/WebScraping/proyecto2/: Main.py  Procesamiento.py
Application/WebScraping/proyecto2/data/: productos.csv
Application/WebScraping/proyecto3/src/: LinkedBot.py
Application/WebScraping/proyecto3/src/data/: session_cookies.csv
Application/WebScraping/proyecto3/src/extraer_llaves/: Extract_key_session.py
Application/WebScraping/proyecto3/src/modulos/: Login.py
Application/poo/: Carro.py
