[tool.poetry]
name = "aprendizaje"
version = "0.1.0"
description = ""
authors = ["Juan Sebastian Garcia Alzate <117672609+JuanSebastianGarcia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
